[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "graph-service"
version = "0.1.0"
description = "Zep Graph service implementing Graphiti package"
readme = "README.md"
authors = [ { "name" = "Paul Paliychuk", "email" = "paul@getzep.com" } ]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115",
  "graphiti-core",
  "httpx>=0.28.1",
  "pydantic-settings>=2.4",
  "uvicorn>=0.30.6",
]

packages = [ { include = "graph_service", from = "." } ]

[dependency-groups]
dev = [
  "fastapi-cli>=0.0.5",
  "mypy>=1.11.1",
  "pydantic>=2.8.2",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24",
  "pytest-xdist>=3.6.1",
  "python-dotenv>=1.0.1",
  "ruff>=0.6.2",
]

[tool.poetry.group.dev.dependencies]

[tool.ruff]
line-length = 100

format.indent-style = "space"
format.quote-style = "single"
format.docstring-code-format = true
lint.select = [
  # flake8-bugbear
  "B",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # pyupgrade
  "UP",
]
lint.ignore = [ "E501" ]

[tool.pytest.ini_options]
pythonpath = [ "." ]
